LaTeX: wrap unit macros in math mode in glossary table

--- a/src/bitcoin_seconds_whitepaper_section_v_0_6_6.tex
+++ b/src/bitcoin_seconds_whitepaper_section_v_0_6_6.tex
@@ -302,20 +302,20 @@ Empirical cadence can deviate from target; smooth inter-block times to estimate 
 
 \subsection*{A. Glossary of Symbols (units in brackets)}
 \begin{tabular}{@{}l l@{}}
-$i(t)$ & income inflow [\sps] \\
-$\mu(t)$ & spending outflow [\sps] \\
+$i(t)$ & income inflow [$\sps$] \\
+$\mu(t)$ & spending outflow [$\sps$] \\
 $A(t)$ & value-weighted coin age (HODLing strength) [s] \\
 $A_0$ & coin-age baseline (e.g., rolling median) [s] \\
-$I(t)$ & protocol expansion rate [\sper] \\
-$I_0$ & expansion-rate baseline [\sper] \\
+$I(t)$ & protocol expansion rate [$\sper$] \\
+$I_0$ & expansion-rate baseline [$\sper$] \\
 $s(t)$ & current holdings [sats] \\
 $r$ & retirement (forward) horizon [s] \\
 $CP(t)$ & cumulative CPI-weighted cost (optional) [sats] \\
 $\mathrm{SSR}(t)$ & surplus-to-spending ratio [1] \\
-$f(t)$ & productive flow of durable claims [\sps] \\
+$f(t)$ & productive flow of durable claims [$\sps$] \\
 $S(T)$ & cumulative durable claims [sats] \\
-$\mathrm{BXS}(T)$ & Bitcoin-Seconds (time-weighted claims) [\SXS] \\
-$\mathrm{BXS}_{\mathrm{core}}(T)$ & baseline time-weighted wealth $\int_0^T W(t)\,dt$ [\SXS] \\
+$\mathrm{BXS}(T)$ & Bitcoin-Seconds (time-weighted claims) [$\SXS$] \\
+$\mathrm{BXS}_{\mathrm{core}}(T)$ & baseline time-weighted wealth $\int_0^T W(t)\,dt$ [$\SXS$] \\
 $W(t)$ & wealth (balance) [sats] \\
 \end{tabular}
 
